--- a/attachments/vueBase6Component5.html
+++ b/attachments/vueBase6Component5.html
@@ -14,6 +14,7 @@
 			$nextTick的用法及异步更新队列的概念
 			X-Templates的用法
 			手动挂载Vue的实例
+			使用template标签来定义组件的模板
 		总结结束-->
 		
 		<!--递归组件-->
@@ -68,6 +69,17 @@
 		
 		<!--手动挂载Vue的实例-->
 		<div id="mount-div"></div>
+		
+		<!--使用template标签来定义组件的模板-->
+		<div id="app7">
+			<tptest></tptest>
+		</div>
+		<template id="tt1">
+			<div>
+				<h2>这里是template标签设置的模板标题</h2>
+				<p>{{dd}}</p>
+			</div>
+		</template>
 		
 		
 		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
@@ -178,6 +190,27 @@
 				}
 			});
 			new MyComponent().$mount('#mount-div');  //用new创建一个新实例，并用$mount挂载到#mount-div中
+			
+//			第七个例子:使用template标签来定义组件的模板
+			Vue.component('tptest', {
+				template: '#tt1',
+				data:function() {
+					return {
+						dd:"这里是template标签设置的模板内容"
+					}
+				}
+			});
+			var ap7=new Vue({
+				el:'#app7'
+			});
+//			如果使用局部组件,那么写法是
+//			components:{
+//				'tptest':{
+//					template:'#tt1'
+//				}
+//			}
+			
+			
 		</script>
 	</body>
 </html>
